# Cbuild

./: AGENTS.md  CMakeLists.txt  build.gradle.kts  settings.gradle.kts
src/: CMakeLists.txt  CbuildError.h  auxiliary.h  env.h  line.cpp  line.h  main.cpp  scanner.cpp  scanner.h  stringUtil.h  variable.cpp  variable.h
src/backward/: CMakeLists.txt  backward.cpp  backward.hpp
src/main/antlr/: cbuild.g4  hello.g4
src/main/java/io/Cbuild/: Common.java  Cursor.java  Env.java  ExecIR.java  Expansion.java  Main.java  Model.java  Preprocessor.java  ThrowingErrorListener.java  cBuildCompiler.java  cBuildIR.java  cbuild.interp  cbuild.tokens  cbuildBaseListener.java  cbuildBaseVisitor.java  cbuildException.java  cbuildLexer.interp  cbuildLexer.java  cbuildLexer.tokens  cbuildListener.java  cbuildParser.java  cbuildVisitor.java  cli.java  make.grammar.md  shell.java  (+5 more)
src/test/java/: ParserTest.java  YsharpBackendTest.java  YsharpParseableTest.java  utils.java
src/test/java/common/: CircularDependencyTest.java  ParserTest.java  VariableExpansionTest.java  graphBuilderTest.java  minimalApiBackendTest.java  minimalApiParseableTest.java
src/test/java/minimalApi/: CircularDependencyTest.java  VariableExpansionTest.java  graphBuilderTest.java  minimalApiBackendTest.java  minimalApiParseableTest.java
src/test/java/preprocessor/: preprocessorTest.java
src/test/java/util/: utils.java
src/test/java/ysharpBackend/: CircularDependencyTest.java  VariableExpansionTest.java  YgraphBuilderTest.java  YsharpBackendTest.java  YsharpParseableTest.java
src/util/include/: stringUtil.h
(+64 files in other folders)
